// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test rspack-plugin src/plugin.ts > test plugin interceptor > rspack data store 1`] = `
{
  "dependencies": [],
  "exports": [],
  "moduleGraphModules": [],
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "dependencies": [],
      "id": 1,
      "imported": [],
      "isPreferSource": false,
      "kind": 0,
      "path": "<ROOT>/packages/doctor-rspack-plugin/tests/fixtures/a.js",
      "size": {
        "parsedSize": 0,
        "sourceSize": 33,
        "transformedSize": 33,
      },
      "webpackId": "",
    },
  ],
  "sideEffects": [],
  "variables": [],
}
`;

exports[`test rspack-plugin src/plugin.ts test plugin interceptor rspack data store 1`] = `
{
  "dependencies": [],
  "exports": [],
  "moduleGraphModules": [],
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "dependencies": [],
      "id": 1,
      "imported": [],
      "isPreferSource": false,
      "kind": 0,
      "path": "tests/fixtures/a.js",
      "size": {
        "parsedSize": 0,
        "sourceSize": 33,
        "transformedSize": 33,
      },
      "webpackId": "",
    },
  ],
  "sideEffects": [],
  "variables": [],
}
`;
